--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+    <h1> Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/chickencutlets.html">Chicken Cutlets</a></li>
+        <li><a href="recipes/spicysausageballs.html">Spicy Sausage Balls</a></li>
+    </ul>
+
 </body>
 
 </html>
